testing styles for fixing spacing on schedule page

--- a/src/components/pages/firsttimeuserpage/FirstTimeUserPage.css
+++ b/src/components/pages/firsttimeuserpage/FirstTimeUserPage.css
@@ -6,10 +6,9 @@
   color: black;
 }
 
-.parent-bg,
+body,
 html {
   background-color: #F7F0E8;
-  min-height: 800px;
 }
 
 .my-tbl {
